# chainsafe-ipfs-upload

./: .gitignore  Cargo.toml  README.md  TASK.md  build.rs  foundry.toml  hardhat.config.js  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
contracts/: Box.sol  StoredString.sol
examples/: upload-local.rs
src/: lib.rs  main.rs
tests/: integration.rs
