[package]
name = "chainsafe-ipfs-upload"
version = "0.1.0"
edition = "2021"
description = "Uploads a file to ipfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
http = "0.2.9"
ipfs-api-backend-hyper = "0.6.0"
iroh-api = { git = "https://github.com/n0-computer/beetle", version = "0.2.0" }
iroh-unixfs = { git = "https://github.com/n0-computer/beetle", version = "0.2.0" }
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
