[package]
name = "chainsafe-ipfs-upload"
version = "0.1.0"
edition = "2021"
description = "Uploads a file to ipfs, and stores the Content ID in an ethereum contract"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
enum-as-inner = "0.5.1"
ethers = "2.0.0"
futures = "0.3.26"
http = "0.2.9"
ipfs-api-backend-hyper = "0.6.0"
log = "0.4.17"
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
url = "2.3.1"

[build-dependencies]
cargo-emit = "0.2.1"
color-eyre = "0.6.2"
ethers = { version = "2.0.0", features = ["solc-full"] }
serde_json = "1.0.94"
